--- a/content/02.author-sections.md
+++ b/content/02.author-sections.md
@@ -234,8 +234,6 @@ More information on the tool and its inception is available in the project manus
 
 <!-- Casey Greene -->
 
-### Casey Greene
-
 I run an integrative genomics research lab at the University of of Pennsylvania, and I direct the Childhood Cancer Data Lab for Alex's Lemonade Stand Foundation.
 The lab at Penn develops methods to integrate large-scale public datasets, primarily from transcriptomic assays, and applies these methods to a broad set of biological questions.
 We've studied numerous systems, and we currently have active research projects in the application areas of microbial systems [@doi:10.1128/mSystems.00025-15; @doi:10.1016/j.cels.2017.06.003], cancers [@doi:10.1142/9789813235533_0008; @doi:10.1016/j.celrep.2018.03.046; @doi:10.1016/j.celrep.2018.03.076; @doi:10.1016/j.cell.2018.03.035], and rare diseases [@doi:10.1101/395947].
@@ -638,7 +636,14 @@ This is an improved version of my main figure in this interesting study [@doi:10
 
 <!-- Martin Seneviratne -->
 
+### Martin Seneviratne
 
+I'm a graduate student in the Boussard Lab at Stanford, working on secondary analyses of EHR data. 
+We are interested in developing machine learning models for electronic phenotyping (i.e. building research cohorts) and for predicting patient outcomes, mainly with an oncology focus.
+
+We recently published a paper on patient reported outcomes in prostate cancer showing significant demographic differences in patient-reported physical and mental health [@doi:10.1002/cncr.31895].
+
+I'm soon finishing my time in the lab and returning to clinical medicine.
 
 <!-- Matthew Settles -->
 
